# FleetBattle2

./: CMakeLists.txt  LICENSE.md  README.md
include/: agent.hpp  board.hpp  concepts.hpp  matchMaster.hpp  opponentBoard.hpp  player.hpp  playerBoard.hpp  types.hpp  utilities.hpp
src/: CMakeLists.txt  main.cpp
src/agent/: CMakeLists.txt  agent.cpp  functor.cpp  readMessage.cpp  writeMessage.cpp
src/opponentBoard/: CMakeLists.txt  getBoardStatus.cpp  getSquareStatus.cpp  opponentBoard.cpp  setSquareStatus.cpp
src/player/: CMakeLists.txt  addSunkShip.cpp  checkBoard.cpp  checkOtherBoard.cpp  checkOwnBoard.cpp  checkShoot.cpp  getDeployedShipsCount.cpp  getShunkShipCount.cpp  getShunkShipsCount.cpp  getSunkShipsCount.cpp  isShipHit.cpp  isShipSunk.cpp  player.cpp  updateOtherBoard.cpp
src/playerBoard/: CMakeLists.txt  getBoardStatus.cpp  getSquareStatus.cpp  playerBoard.cpp  setSquareStatus.cpp
src/utilities/: CMakeLists.txt  decodeCoordinates.cpp  isHorizontal.cpp  isVertical.cpp  makeBoardFromShipsList.cpp  shipsOverlap.cpp  tokenizeMessage.cpp
